--- a/Assignments/hm01_ioslides.Rmd
+++ b/Assignments/hm01_ioslides.Rmd
@@ -1,19 +1,21 @@
 ---
 title: "hm01_ioslides"
-output: ioslides_presentation
+output:
+  beamer_presentation: default
+  ioslides_presentation: default
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
-Exploring a dataset
+#### 1. Exploring a dataset
 ```{r}
 #Finding a dataset of interest within the in-built R dataset collection
 datasets::Titanic
 ```
 
-Using functions to explore the dataset
+#### 2. Using functions to explore the dataset
 ```{r}
 #Obtains the dimensions of the dataset
 dim(Titanic)
