--- a/Class Participation/cm006-exercise.Rmd
+++ b/Class Participation/cm006-exercise.Rmd
@@ -27,8 +27,8 @@ Load the `gapminder` and `tidyverse` packages. Hint: `suppressPackageStartupMess
     
 ```{r load packages, warning = FALSE, message = FALSE}
 # load your packages here:
-library(FILL_THIS_IN)
-library(FILL_THIS_IN)
+library(tidyverse)
+library(gapminder)
 ```
     
 
@@ -37,7 +37,7 @@ library(FILL_THIS_IN)
 1. Make a data frame containing the columns `year`, `lifeExp`, `country` from the gapminder data, in that order.
 
 ```{r}
-select(gapminder, FILL_THIS_IN)
+select(gapminder, year, lifeExp, country)
 ```
 
 
@@ -48,30 +48,30 @@ select(gapminder, FILL_THIS_IN)
 select(gapminder, country, continent, year, lifeExp)
 
 # Better way:
-select(gapminder, FILL_THIS_IN)
+select(gapminder, country:lifeExp)
 ```
 
 
 3. Select all variables, except `lifeExp`.
 
 ```{r}
-select(gapminder, FILL_THIS_IN)
+select(gapminder, -lifeExp)
 ```
 
 4. Put `continent` first. Hint: use the `everything()` function.
 
 ```{r}
-select(gapminder, FILL_THIS_IN, FILL_THIS_IN)
+select(gapminder, continent, everything()) 
 ```
 
 
-5. Rename `continent` to `cont`.
+5. Rename `continent` to `cont`. There are two ways to rename columns.
 
 ```{r}
 # compare
-select(gapminder, FILL_THIS_IN)
+select(gapminder, cont = continent, everything()) #when remaning things with select, it will rename but then select that new column in the order that you write it
 
-rename(gapminder, FILL_THIS_IN)
+rename(gapminder, cont = continent) #to rename in the same place, use the rename function
 ```
 
 
@@ -80,19 +80,19 @@ rename(gapminder, FILL_THIS_IN)
 1. Order by year.
 
 ```{r}
-arrange(gapminder, FILL_THIS_IN)
+arrange(gapminder, year) #all rows with 1952 come first
 ```
 
 2. Order by year, in descending order.
 
 ```{r}
-arrange(gapminder, FILL_THIS_IN)
+arrange(gapminder, desc(year)) #now starts at the highest number & goes down to 1952 
 ```
 
 3. Order by year, then by life expectancy.
 
 ```{r}
-arrange(gapminder, FILL_THIS_IN, FILL_THIS_IN)
+arrange(gapminder, year, lifeExp)
 ```
 
 ## Piping, `%>%` (8 min)
@@ -107,14 +107,20 @@ This is how I could do it by *nesting* the two function calls:
 
 ```{r nesting functions example, eval = F}
 # Nesting function calls can be hard to read
-arrange(select(gapminder, year, lifeExp, country), year, lifeExp)
+arrange(select(gapminder, year, lifeExp, country), year, lifeExp) #wanted to select something, and then arrange something, but if you wanted to add more tasks, this line of code would become too hard to read eventually
+# Piping allows you to write it out as you want it to happen 
 ```
 
 Now using with pipes:
 
 ```{r}
 # alter the below to include 2 "pipes"
-arrange(select(gapminder, year, lifeExp, country), year, lifeExp)
+gapminder %>%
+  select(year, lifeExp, country) %>%
+  arrange(year, lifeExp)
+# this has a property described as self-documenting, tells you exactly what is happening without the need to write many comments 
+
+# if you did arrange(year, country) instead it would arrange the countries alphabetically, so arrange doesn't change the order of the columns but within them 
 ```
 
 # Resume lecture 
@@ -127,21 +133,33 @@ Return to guide at section 6.7.
 
 ```{r}
 gapminder %>%
-  filter(FILL_THIS_IN)
+  filter(pop > 100000000)
 ```
 
 2. Your turn: of those rows filtered from step 1., only take data from Asia.
 
-```{r}
+```{r} 
+#The three have the same results
+
 gapminder %>%
-  filter(FILL_THIS_IN)
+  filter(pop > 100000000) %>%
+  filter(continent == "Asia") #1 
+
+gapminder %>%
+  filter(pop > 100000000 & continent == "Asia") #2
+
+gapminder %>%
+  filter(pop > 100000000,
+         continent == "Asia") #3
 ```
 
 3. Repeat 2, but take data from countries Brazil, and China. 
 
 ```{r}
 gapminder %>%
-  filter(FILL_THIS_IN)
+  filter(pop > 100000000,
+         country == "Brazil" | country == "China")
+         
 ```
 
 ## `mutate()` (10 min)
@@ -153,7 +171,11 @@ Let's get:
 
 ```{r}
 gapminder %>%
-  mutate(FILL_THIS_IN)
+  mutate(gdpBill = gdpPercap*pop/1000000000)
+
+#there are functions like round() that allow you to round up to decimals, or significance()
+0.86768
+round(0.86768, digits = 2)
 ```
 
 Notice the backwards compatibility! No need for loops!
@@ -162,7 +184,7 @@ Try the same thing, but with `transmute` (drops all other variables).
 
 ```{r}
 gapminder %>%
-  transmute(FILL_THIS_IN)
+  transmute(gdpBill = gdpPercap*pop/1000000000) #using mutate & select (can be a shortcut if you want to do those two and don't want to run two lines of code)
 ```
 
 The `if_else` function is useful for changing certain elements in a data frame.
@@ -171,12 +193,14 @@ Example: Suppose Canada's 1952 life expectancy was mistakenly entered as 68.8 in
 
 ```{r}
 gapminder %>%
-  mutate(FILL_THIS_IN)
+  mutate(lifeExp = if_else(country == "Canada" & year == "1952", 70, lifeExp)) #so this means that when the country is Canada and the year is 1952, we want the value to be 70, but we want the rest to remain the same so we just write lifeExp
 ```
 
 Your turn: Make a new column called `cc` that pastes the country name followed by the continent, separated by a comma. (Hint: use the `paste` function with the `sep=", "` argument).
 
 ```{r}
+gapminder %>%
+  mutate(cc = paste("country", "continent"))
 ```
 
 These functions we've seen are called __vectorized functions__.
