--- a/Class Participation/cm010_tibblejoins.Rmd
+++ b/Class Participation/cm010_tibblejoins.Rmd
@@ -66,22 +66,22 @@ time %>% # Want to preserve everything in time, add album info if there is album
 
 ```{r}
 time %>% 
-  FILL_THIS_IN(album, by = "song")
+  semi_join(album, by = "song") 
 ```
 
 4. Which artists are in `time`, but not in `album`?
 
 ```{r}
 time %>% 
-  anti_join(album, by = "FILL_THIS_IN")
+  anti_join(album, by = "artist_name") # anti-join shows what is in "time" that is not in "album" (i.e. subtracts) So Mariah Carey is in the time tibble but not in the album tibble 
 ```
 
 
 5. You've come across these two tibbles, and just wish all the info was available in one tibble. What would you do?
 
 ```{r}
-FILL_THIS_IN %>% 
-  FILL_THIS_IN(FILL_THIS_IN, by = "song")
+time %>% 
+  full_join(album, by = c("song", "artist_name"))
 ```
 
 
